# Praktikum-6

20_cpp/: CMakeLists.txt  course.cpp  course.h  main.cpp  student.cpp  student.h
23_cpp/: CMakeLists.txt  circle.cpp  circle.h  main.cpp  point.cpp  point.h
24_cpp/: CMakeLists.txt  main.cpp
Minesweeper/: CMakeLists.txt  main.cpp  minesweeperfield.cpp  minesweeperfield.h  minesweepergame.cpp  minesweepergame.h  mineweeperfield.cpp  mineweeperfield.h
